# world-wall-clock

./: .coverage  .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
tests/: test_wwclock.py
typedefs/: README.md
typedefs/urwid/: __init__.pyi  canvas.pyi  command_map.pyi  container.pyi  curses_display.pyi  decoration.pyi  display_common.pyi  escape.pyi  font.pyi  graphics.pyi  html_fragment.pyi  lcd_display.pyi  listbox.pyi  monitored_list.pyi  numedit.pyi  old_str_util.pyi  raw_display.pyi  signals.pyi  split_repr.pyi  str_util.pyi  text_layout.pyi  treetools.pyi  util.pyi  vterm.pyi  web_display.pyi  wimp.pyi
typedefs/urwid/event_loop/: __init__.pyi  abstract_loop.pyi  asyncio_loop.pyi  glib_loop.pyi  main_loop.pyi  select_loop.pyi  tornado_loop.pyi  trio_loop.pyi  twisted_loop.pyi  zmq_loop.pyi
typedefs/urwid/widget/: __init__.pyi  attr_map.pyi  attr_wrap.pyi  bar_graph.pyi  big_text.pyi  box_adapter.pyi  columns.pyi  constants.pyi  container.pyi  divider.pyi  edit.pyi  filler.pyi  frame.pyi  grid_flow.pyi  line_box.pyi  overlay.pyi  padding.pyi  pile.pyi  popup.pyi  progress_bar.pyi  solid_fill.pyi  text.pyi  widget.pyi  widget_decoration.pyi  wimp.pyi
world_wall_clock/: __init__.py  __main__.py  wwclock.py
