[tool.poetry]
name = "world-wall-clock"
version = "0.1.5"
description = "TUI world clock application"
authors = ["Dominic Delabruere <dominic.delabruere@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "world_wall_clock"}]
repository = "https://github.com/ddelabru/world-wall-clock"

[tool.poetry.dependencies]
python = "^3.10"
urwid = "^2.2.2"
xdg-base-dirs = "^6.0.1"
tzdata = ">=2023.3"

[tool.poetry.scripts]
wwclock = "world_wall_clock.wwclock:main"

[tool.poetry.group.dev.dependencies]
black = ">=23.10.1"
flake8 = ">=6.1.0"
isort = ">=5.12.0"
mypy = ">=1.6.1"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"

[tool.black]
target-version = ["py310"]

[tool.isort]
combine_as_imports = true
profile = "black"
skip_gitignore = true

[tool.mypy]
mypy_path = "typedefs/"
explicit_package_bases = true
files = ["world_wall_clock/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
